Correcion TDAs. Lectores y Controllers corregidos.