@@ -2,6 +2,7 @@ package com.grupo02.videogamestore;
 
 import com.grupo02.TDAs.DoublyCircularLinkedList;
 import com.grupo02.TDAs.NodeList;
+import com.grupo02.tdas2.Readers.Reader;
 import com.grupo02.videogamestore.modelo.Juego;
 import java.io.FileInputStream;
 import java.io.IOException;
@@ -22,6 +23,7 @@ import javafx.scene.control.TextField;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.input.MouseEvent;
+import javafx.scene.layout.FlowPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.Pane;
 import javafx.scene.layout.VBox;
@@ -34,6 +36,9 @@ public class TiendaController implements Initializable {
      */
     @FXML
     private Button btnCambiarUsuario;
+    
+    @FXML
+    private FlowPane fpTienda;
     
     @FXML
     private Button btnBuscar;
@@ -63,79 +68,24 @@ public class TiendaController implements Initializable {
     @FXML
     private ComboBox<?> cbxCategorías;
     
-    private DoublyCircularLinkedList<Juego> listadeJuegos;
-
-    private static NodeList<Juego> nodofinalPrincipal;
+    private static DoublyCircularLinkedList<Juego> listaJuegos;
 
     @Override
     public void initialize(URL url, ResourceBundle rb) {
-        listadeJuegos = new DoublyCircularLinkedList<>();
-//        listadeJuegos.addLast(new Juego("TEXTO1"));
-//        listadeJuegos.addLast(new Juego("TEXTO2"));
-//        listadeJuegos.addLast(new Juego("TEXTO3"));
-//        listadeJuegos.addLast(new Juego("TEXTO4"));
-//        listadeJuegos.addLast(new Juego("TEXTO5"));
-//        listadeJuegos.addLast(new Juego("TEXTO6"));
-//        listadeJuegos.addLast(new Juego("TEXTO7"));
-//        listadeJuegos.addLast(new Juego("TEXTO8"));
-//        listadeJuegos.addLast(new Juego("TEXTO9"));
-//        listadeJuegos.addLast(new Juego("TEXTO10"));
-        cargarPrincipales();
-        cargarCategorías();
-        cargarTOPJugados();
-        cargarTOPVendidos();
-        mostraBotones(hboxPrincipales, 0, 5);
-        eliminarBotones(hboxPrincipales, 0, 6);
-        mostraBotones(hboxCategorías, 0, 7);
-        eliminarBotones(hboxCategorías, 0, 8);
-    }
-
-    private void mostraBotones(Pane p, int indice1, int indice2) {
-        Button btndere = new Button(">");
-        Button btnizq = new Button("<");
-        p.addEventHandler(MouseEvent.MOUSE_ENTERED, me -> {
-            p.getChildren().add(indice2, btndere);
-            p.getChildren().add(indice1, btnizq);
-            //mostrarAnteriores(btnizq);
-            //mostrarSiguientes(btndere);
-        });
-        
-        btndere.setOnAction(acte -> {
-//            mostrarAnteriores();
-        });
-        btnizq.setOnAction(acte -> {
-//            mostrarSiguientes();
-        });
-    }
-
-    private void eliminarBotones(Pane p, int indice1, int indice2) {
-        p.addEventHandler(MouseEvent.MOUSE_EXITED, me -> {
-            p.getChildren().remove(indice2);
-            p.getChildren().remove(indice1);
-        });
+        listaJuegos = Reader.cargarJuegos("games_data.bin");
+        cargarPrinciapal();
+        //Reader.leerJuegos("games_data.csv");
     }
     
-    public VBox cargarJuego(Juego j) {//LUIS
+    public static VBox cargarJuego(Juego j) {//LUIS
         VBox vbx = new VBox();
-        vbx.getChildren().addAll(obtenerImagen(j, 150, 200), new Label(j.getTitulo()));
+        vbx.getChildren().addAll(Reader.obtenerImagen(j.getImagen(), 150, 200), new Label(j.getTitulo()));
         vbx.setOnMouseClicked(mc -> cargarDetalleJuego(j));
         return vbx;
     }
     
-    public ImageView obtenerImagen(Juego j, int h, int w) {//LUIS
-        ImageView imgview = new ImageView();
-        try ( FileInputStream input = new FileInputStream(App.fileImage + "lupa.png")) {
-            Image img = new Image(input);
-            imgview.setImage(img);
-            imgview.setFitHeight(h);
-            imgview.setFitWidth(w);
-        } catch (IOException ex) {
-            System.out.println("Error imagen 1");
-        }
-        return imgview;
-    }
     
-    public void cargarDetalleJuego(Juego j) { //LUIS
+    public static void cargarDetalleJuego(Juego j) { //LUIS
         Stage stage = new Stage();
         VBox root = new VBox();
         Scene scene = new Scene(root, 250, 355);
@@ -151,92 +101,66 @@ public class TiendaController implements Initializable {
         datos.setAlignment(Pos.CENTER);
         datos.setStyle("-fx-background-color:#86b5fc");
         root.setSpacing(20);
-        root.getChildren().addAll(obtenerImagen(j, 100, 150), datos);
+        root.getChildren().addAll(Reader.obtenerImagen(j.getImagen(), 100, 150), datos);
         stage.setScene(scene);
         stage.show();
     }
     
-//    private void mostraBotones(Pane p, NodeList<Juego> nodo) {
-//        NodeList<Juego> n = nodo;
-//        Button btn2 = new Button("SIGUIENTE");
-//        Button btn1 = new Button("ATRÁS");
-//        p.addEventHandler(MouseEvent.MOUSE_ENTERED, me -> {
-//            p.getChildren().add(1, btn2);
-//            p.getChildren().add(0, btn1);
-//        });
-//        btn1.setOnAction(acte -> {
-//            mostrarAnteriores(flwpnPrinciaples, 3);
-//        });
-//        btn2.setOnAction(acte -> {
-//            mostrarSiguientes(flwpnPrinciaples, 3);
-//        });
-//    }
-//
-//    private void eliminarBotones(Pane p) {
-//        p.addEventHandler(MouseEvent.MOUSE_EXITED, me -> {
-//            p.getChildren().remove(2);
-//            p.getChildren().remove(0);
-//        });
-//    }
-//
-//    private void mostrarSiguientes(Pane p, int cant) {
-//        p.getChildren().clear();
-//        for (int x = 1; x <= cant; x++) {
-//            p.getChildren().add(cargarJuego(nodofinalPrincipal.getContent()));
-//            nodofinalPrincipal = nodofinalPrincipal.getNext();
-//        }
-//    }
-//
-//    private void mostrarAnteriores(Pane p, int cant) {
-//        p.getChildren().clear();
-//        for (int x = 1; x <= cant; x++) {
-//            p.getChildren().add(cargarJuego(nodofinalPrincipal.getContent()));
-//            nodofinalPrincipal = nodofinalPrincipal.getPrevius();
-//        }
-//    }
-    
-    public void mostrarSiguientes(DoublyCircularLinkedList<Juego> l, Pane p){
-        NodeList<Juego> temp = l.getFirst();
-        NodeList<Juego> tempF = l.getLast();
-        int size = l.size();
-        for (int x = 0; x < size; x++){
-            p.getChildren().add(cargarJuego(temp.getContent()));
-            temp = temp.getNext();
-            tempF = tempF.getNext();
-            l.addLast(tempF.getContent());
-            l.removeFirst();
-        }
-        
+    private static void mostraBotones(Pane p, DoublyCircularLinkedList<Juego> mostrados,DoublyCircularLinkedList<Juego> originales) {
+
+        Button btn2 = new Button("SIGUIENTE");
+        Button btn1 = new Button("ATRÁS");
+        p.addEventHandler(MouseEvent.MOUSE_ENTERED, me -> {
+            p.getChildren().add(1, btn2);
+            p.getChildren().add(0, btn1);
+        });
+        btn1.setOnAction(acte -> {
+            mostrarAnteriores(p,mostrados, originales);
+        });
+        btn2.setOnAction(acte -> {
+            mostrarSiguientes(p,mostrados,originales);
+        });
     }
-    
-    public void mostrarAnteriores(DoublyCircularLinkedList<Juego> l, Pane p){
-        NodeList<Juego> temp = l.getLast();
-        NodeList<Juego> tempF = l.getFirst();
-        int size = l.size();
-        for (int x = 0; x < size; x++){
-            p.getChildren().add(cargarJuego(temp.getContent()));
-            temp = temp.getPrevius();
-            tempF = tempF.getPrevius();
-            l.addFirst(tempF.getContent());
-            l.removeLast();
-        }
-    }
-    
-    
-    private void mostrarSiguientes(Button btn) {
-        btn.setOnAction(acte -> {
-            System.out.println(btn.getParent().getId() + "NEXT");
+//
+    private static void eliminarBotones(Pane p) {
+        p.addEventHandler(MouseEvent.MOUSE_EXITED, me -> {
+            p.getChildren().remove(2);
+            p.getChildren().remove(0);
         });
     }
 
-    private void mostrarAnteriores(Button btn, DoublyCircularLinkedList<Juego> l, Juego juego) {
-        btn.setOnAction(acte -> {
-            
-            // Limpia el flowpane
-            // Carga los 6 antes del primero
-            System.out.println(btn.getParent().getId() + "BACK");
-        });
+    
+    private static void renderizarJuegos(DoublyCircularLinkedList<Juego> juegos, Pane p){
+        for(Juego j:juegos){
+            p.getChildren().add(cargarJuego(j));
+        }
     }
+    
+    private static void mostrarSiguientes(Pane p, DoublyCircularLinkedList<Juego> mostrados,DoublyCircularLinkedList<Juego> originales){
+        p.getChildren().clear();
+        
+        NodeList<Juego> tempF =   originales.getNode(mostrados.getLast().getContent());
+        int size = mostrados.size();
+        for (int x = 0; x < size; x++){
+            tempF = tempF.getNext();
+            mostrados.addLast(tempF.getContent());
+            mostrados.removeFirst();
+        }
+        renderizarJuegos(mostrados,p);
+        
+    }
+    
+    public static void mostrarAnteriores(Pane p, DoublyCircularLinkedList<Juego> mostrados,DoublyCircularLinkedList<Juego> originales){
+        p.getChildren().clear();
+        NodeList<Juego> tempF =   originales.getNode(mostrados.getFirst().getContent());
+        int size = mostrados.size();
+        for (int x = 0; x < size; x++){
+            tempF = tempF.getPrevius();
+            mostrados.addFirst(tempF.getContent());
+            mostrados.removeLast();
+        }
+        renderizarJuegos(mostrados,p);
+    }    
 
     @FXML
     private void cambiarUsuario() throws IOException {
@@ -260,99 +184,18 @@ public class TiendaController implements Initializable {
         }
     }
     
-//    private void cargarPrincipales(DoublyCircularLinkedList<Juego> l) {
-//        nodofinalPrincipal = l.getFirst();
-//        for (int x = 1; x <= 3; x++) {
-//            flwpnPrinciaples.getChildren().add(cargarJuego(nodofinalPrincipal.getContent()));
-//            nodofinalPrincipal = nodofinalPrincipal.getNext();
-//        }
+    private static void cargarJuegos(DoublyCircularLinkedList<Juego> originales,int cantidadJuegos,Pane p) {
+        DoublyCircularLinkedList<Juego> mostrados = Reader.inicializarLista(originales, cantidadJuegos);
+        renderizarJuegos(mostrados,p);
+        mostraBotones((Pane)p.getParent(), mostrados,originales);
+        eliminarBotones((Pane)p.getParent());
 //        flwpnPrinciaples.setAlignment(Pos.CENTER);
 //        flwpnPrinciaples.setHgap(100);
 //        flwpnPrinciaples.setVgap(100);
-//        mostraBotones(vboxPrincipales, nodofinalPrincipal);
-//        eliminarBotones(vboxPrincipales);
-//    }
+    }
     
-
-    private void cargarPrincipales() {
-        // temp = null;
-        for (int x = 1; x <= 5; x++) {
-            VBox vbx = new VBox();
-            try ( FileInputStream input = new FileInputStream(App.fileImage + "lupa.png")) {
-                Image img = new Image(input);
-                ImageView imgview = new ImageView(img);
-                imgview.setFitHeight(100);
-                imgview.setFitWidth(100);
-                vbx.getChildren().addAll(imgview, new Label("TITULO"));
-                hboxPrincipales.getChildren().add(vbx);
-            } catch (IOException ex) {
-                System.out.println("Error imagen 1");
-            }
-        }
-        hboxPrincipales.setSpacing(60);
-        hboxPrincipales.setAlignment(Pos.CENTER);
+    private void cargarPrinciapal(){
+        cargarJuegos(listaJuegos,6,fpTienda);
     }
-
-    private void cargarCategorías() {
-        for (int x = 1; x <= 7; x++) {
-            VBox vbx = new VBox();
-            try ( FileInputStream input = new FileInputStream(App.fileImage + "lupa.png")) {
-                Image img = new Image(input);
-                ImageView imgview = new ImageView(img);
-                imgview.setFitHeight(100);
-                imgview.setFitWidth(100);
-                vbx.getChildren().addAll(imgview, new Label("TITULO 1"), new Label("TITULO 2"), new Label("OTROS DATOS"), new Label("OTROS DATOS 2"));
-                hboxCategorías.getChildren().add(vbx);
-            } catch (IOException ex) {
-                System.out.println("Error imagen 2");
-            }
-        }
-        hboxCategorías.setSpacing(30);
-        hboxCategorías.setAlignment(Pos.CENTER);
-    }
-
-    private void cargarTOPJugados() {
-        for (int x = 1; x <= 10; x++) {
-            VBox vbx = new VBox();
-            try ( FileInputStream input = new FileInputStream(App.fileImage + "lupa.png")) {
-                Image img = new Image(input);
-                ImageView imgview = new ImageView(img);
-                imgview.setFitHeight(70);
-                imgview.setFitWidth(20);
-                vbx.getChildren().addAll(imgview, new Label("TITULO 1"), new Label("TITULO 2"), new Label("OTROS DATOS"), new Label("OTROS DATOS 2"));
-                hbox1Top10.getChildren().add(vbx);
-            } catch (IOException ex) {
-                System.out.println("Error imagen 3");
-            }
-        }
-        hbox1Top10.setSpacing(30);
-        hbox1Top10.setAlignment(Pos.CENTER_LEFT);
-    }
-
-    private void cargarTOPVendidos() {
-        for (int x = 1; x <= 10; x++) {
-            VBox vbx = new VBox();
-            try ( FileInputStream input = new FileInputStream(App.fileImage + "lupa.png")) {
-                Image img = new Image(input);
-                ImageView imgview = new ImageView(img);
-                imgview.setFitHeight(70);
-                imgview.setFitWidth(20);
-                vbx.getChildren().addAll(imgview, new Label("TITULO 1"), new Label("TITULO 2"), new Label("OTROS DATOS"), new Label("OTROS DATOS 2"));
-                hbox2Top10.getChildren().add(vbx);
-            } catch (IOException ex) {
-                System.out.println("Error imagen 4");
-            }
-        }
-        hbox2Top10.setSpacing(30);
-        hbox2Top10.setAlignment(Pos.CENTER_LEFT);
-    }
-
-    @FXML
-    private void irAdelante(ActionEvent event) {
-    }
-
-    @FXML
-    private void irAtras(ActionEvent event) {
-    }
-
+    
 }
